Closed Bug 982103 Opened 10 years ago Closed 10 years ago

nsSocketTransportService::Dispatch shouldn't NS_WARNING on missing thread

Categories

(Core :: Networking, defect)

x86_64
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla30

People

(Reporter: mcmanus, Assigned: mcmanus)

Details

Attachments

(1 file)

the socket transport service returns the same error when the socket thread does not exist and when the thread exists but cannot have new events posted to it. Both are part of shutdown races, however only on the former case does it do a NS_WARNING.. that warning should go away.

see https://bugzilla.mozilla.org/show_bug.cgi?id=952927#c87
Assignee: nobody → mcmanus
Status: NEW → ASSIGNED
"Bugzilla visibility issues" means I can't see the patch online, but Pat showed me in person.

r=me.
Attachment #8389248 - Flags: review?(sworkman) → review+
https://hg.mozilla.org/mozilla-central/rev/917cdd57679e
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: