bug 982103 - nsSocketTransportService::Dispatch shouldn't NS_WARNING on missing thread r=sworkman